--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "react-bootstrap": "^1.3.0",
     "react-dom": "^16.13.1",
     "react-scripts": "3.4.3",
-    "styled-components": "^5.1.1"
+    "styled-components": "^5.1.1",
+    "typewriter": "^7.1.0",
+    "typewriter-effect": "^2.13.1"
   },
   "scripts": {
     "predeploy": "npm run build",
