--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@merc/react-timeline": "^0.1.42",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
@@ -14,7 +15,8 @@
     "react-scripts": "3.4.3",
     "styled-components": "^5.1.1",
     "typewriter": "^7.1.0",
-    "typewriter-effect": "^2.13.1"
+    "typewriter-effect": "^2.13.1",
+    "vertical-timeline-component-for-react": "^1.0.7"
   },
   "scripts": {
     "predeploy": "npm run build",
